# chinese-anki

./: .gitignore  README.md  gen.py  pyproject.toml  radicals.csv
